following the change of bootstrap javascript module importation, refactorization of userProfileModale. import useRef from reat and Modal from Bootstrap. Changing some style in home page to prevent other component to overflow on other page(sectionTitle in Contact page). Rename alle modale in modal for relevance regarding bootstrap class

--- a/src/components/scss/breakpointMd.scss
+++ b/src/components/scss/breakpointMd.scss
@@ -7,7 +7,7 @@
       .app-title--2 {
         font-size: 2.4rem;
       }
-      .app-btn {
+      .app-btn::on {
         font-size: 1.1rem;
       }
     }
