--- a/src/components/scss/homePage.scss
+++ b/src/components/scss/homePage.scss
@@ -6,6 +6,7 @@
     width: 100vw;
     height : 40rem;
     overflow : hidden;
+    margin-bottom: 3rem;
 
     .app-image__hero{
         width: 100%;
@@ -13,56 +14,67 @@
         object-fit: cover;
         filter : contrast(40%);
     }
-}
-.app-introduction__box{
-    position : absolute;
-    display : flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content : center;
-    top : 30%;
-    gap: 1.2rem;
-
-    .app-title--1,
-    .app-title--2{
-        color : $light;
-        opacity: 100%;
-        font-weight : bold;
-        text-align: center;
-        padding: 0rem 2rem;
-    }
-
-    .app-title--1{
-        font-size: 2.4rem;
-    }
-    .app-title--2{
-        font-size: 2rem;;
+    .app-introduction__box{
+        position : absolute;
+        display : flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content : center;
+        top : 30%;
+        gap: 1.2rem;
+    
+        .app-title--1,
+        .app-title--2{
+            color : $light;
+            opacity: 100%;
+            font-weight : bold;
+            text-align: center;
+            padding: 0rem 2rem;
+        }
+    
+        .app-title--1{
+            font-size: 2.4rem;
+        }
+        .app-title--2{
+            font-size: 2rem;;
+        }
     }
 }
 
 
 // *====================================================
 
+
 .app-about__container{
     display: flex;
     flex-direction: column;
-    margin: 3rem 0.8rem 0rem 0.8rem;
+    margin: 0rem 0.8rem;
     border-radius: 5px;
     padding: 1.5rem;
-
-
-    .app-image__about{
-        width: 100%;
-        aspect-ratio: 16/9;
-        object-fit: cover;
-        margin-bottom: 2rem;
-    }
-    .app-profil__box--text{
-        width: 96%;
-        text-align: justify;
-    }
+    
     .app-title--3{
         font-size: 1.3rem;
         text-transform: uppercase;
     }
+
+    .app-profil__content,
+    .app-progressbar__content{
+        margin-top: 2rem;
+    }
+
+    .app-profil__content{
+        .app-image__about{
+            width: 100%;
+            aspect-ratio: 16/9;
+            object-fit: cover;
+            margin-bottom: 2rem;
+        }
+
+        .app-profil__box--text{
+            width: 96%;
+            text-align: justify;
+        }
+    }
+
+
 }
