--- a/src/components/scss/modal.scss
+++ b/src/components/scss/modal.scss
@@ -17,18 +17,18 @@
         }
 
         .app-modal__box--info{
-            padding: 0.5rem 0;
-            .app-modal__box{
-                padding: 0 0.5rem;
+            padding: 0.5rem 0rem;
+            .app-modal__info-content{
+                padding: 0rem 0.5rem;
 
                  *{
                 display: inline;
-                margin: 0 0.2rem;
+                margin: 0rem 0.2rem;
                 text-align: left;
                 }
             }
             .app-hr{
-                margin: 0.4rem 0;
+                margin: 0.4rem 0rem;
             }
         }
     }
